[android] - use URI instead of URL to enable asset loading